compiler/test/conformance/testdata/errors/07_mix_not_struct.yz
greet #(name String) {
    print(name)
}

Host: {
    mix greet
}

main: {
}
